--- a/clases semestre 2/G0_Introducción_Python.ipynb
+++ b/clases semestre 2/G0_Introducción_Python.ipynb
@@ -145,6 +145,29 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Contraseña incorrecta. Intente nuevamente.\n",
+            "Contraseña correcta. Acceso concedido.\n"
+          ]
+        }
+      ],
+      "source": [
+        "contraseña = \"python123\"\n",
+        "ingreso = input(\"Ingrese la contraseña: \")\n",
+        "while ingreso != contraseña:\n",
+        "    print(\"Contraseña incorrecta. Intente nuevamente.\")\n",
+        "    ingreso = input(\"Ingrese la contraseña: \")\n",
+        "print(\"Contraseña correcta. Acceso concedido.\")\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "bXAO6t1V1psK"
@@ -160,6 +183,36 @@
       },
       "source": [
         "Escribe un código que, utilizando un ciclo *for*, pida al usuario ingresar un número entero y muestre la tabla de multiplicar desde el 1 al 12 de dicho número."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1 x 1 = 1\n",
+            "1 x 2 = 2\n",
+            "1 x 3 = 3\n",
+            "1 x 4 = 4\n",
+            "1 x 5 = 5\n",
+            "1 x 6 = 6\n",
+            "1 x 7 = 7\n",
+            "1 x 8 = 8\n",
+            "1 x 9 = 9\n",
+            "1 x 10 = 10\n",
+            "1 x 11 = 11\n",
+            "1 x 12 = 12\n"
+          ]
+        }
+      ],
+      "source": [
+        "numero = int(input(\"Ingrese un número positivo: \"))\n",
+        "for e in range(1, 13):\n",
+        "    print(f\"{numero} x {e} = {numero * e}\")\n"
       ]
     },
     {
@@ -307,7 +360,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.13.7"
+      "version": "3.13.6"
     }
   },
   "nbformat": 4,
